# hyperion-deps

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cleanup.yml  push_pull.yml  qt5_6.yml
cmake/: HelperMacros.cmake
patch/: protobuf.diff
